objects/ReportCard__c.object
<CustomObject>
    <description>Clicktools ReportCard™ is a custom object that works in conjunction with example surveys to provide a &quot;School&quot; based grading system used to capture feedback on common  events through the customer journey such as Win/Loss, Closed Case and general customer satisfaction/advocacy. 

Use of the grading system provides a clear, easy to understand method of capturing feedback for your customers as well as simplifying communication of overall performance scores and grades at all levels of your organization.

The ReportCard™ also includes fields to capture and report on answers to a popular two-question survey that measures customer advocacy and calculates an overall score.

Please feel free to amend and use this object as you wish. Clicktools does not provide any support for this object and related elements. ReportCard™ is a trademark of Clicktools Ltd.</description>
    <fields>
        <fullName>AccMgmt__c</fullName>
        <label>Account Mgmt grade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Mgmt_status__c</fullName>
        <formula>CASE (  AccMgmt__c  , &quot;A&quot;, IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;Strong&quot;, 10, 100) &amp; &quot; A&quot;, &quot;B&quot;, IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;Strong&quot;, 10, 80) &amp; &quot; B&quot;, &quot;C&quot;, IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;At risk&quot;, 10, 60) &amp; &quot; C&quot;, &quot;D&quot;, IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;At risk&quot;, 10, 40) &amp; &quot; D&quot;, &quot;F&quot;, IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;Danger&quot;, 10, 20) &amp; &quot; F&quot;, &quot;No response&quot;)</formula>
        <label>Account Mgmt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <inlineHelpText>Link to Account the ReportCard is for. May be a &quot;dummy&quot; account set up to capture non-linking responses.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ReportCards</relationshipLabel>
        <relationshipName>ReportCards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budget</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_status__c</fullName>
        <formula>CASE (  Budget__c  , &quot;A&quot;, IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;Strong&quot;, 10, 100) &amp; &quot; A&quot;, &quot;B&quot;, IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;Strong&quot;, 10, 80) &amp; &quot; B&quot;, &quot;C&quot;, IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;At risk&quot;, 10, 60) &amp; &quot; C&quot;, &quot;D&quot;, IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;At risk&quot;, 10, 40) &amp; &quot; D&quot;, &quot;F&quot;, IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;Danger&quot;, 10, 20) &amp; &quot; F&quot;, &quot;No response&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Link to campaign for webinars, events etc.</inlineHelpText>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>ReportCards</relationshipLabel>
        <relationshipName>ReportCards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Closed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The person who closed the case.</inlineHelpText>
        <label>Case Closed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ReportCards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Owner__c</fullName>
        <formula>Case__r.Owner:User.FirstName +  Case__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <formula>TEXT(  Case__r.Type )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>ReportCards</relationshipLabel>
        <relationshipName>ReportCards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closed_case_score__c</fullName>
        <formula>(CASE(  Time_to_resolve__c  , &quot;A&quot;, 5, &quot;B&quot;, 4,&quot;C&quot;,3, &quot;D&quot;,2,&quot;F&quot;,1,0) + CASE(  Time_to_respond__c  , &quot;A&quot;, 5, &quot;B&quot;, 4,&quot;C&quot;,3, &quot;D&quot;,2,&quot;F&quot;,1,0)  + CASE(   Quality_of_on_line_help__c   , &quot;A&quot;, 5, &quot;B&quot;, 4,&quot;C&quot;,3, &quot;D&quot;,2,&quot;F&quot;,1,0))
/
(CASE( Time_to_resolve__c , &quot;A&quot;, 5, &quot;B&quot;, 5,&quot;C&quot;,5, &quot;D&quot;,5,&quot;F&quot;,5,0) + CASE( Time_to_respond__c , &quot;A&quot;, 5, &quot;B&quot;, 5,&quot;C&quot;,5, &quot;D&quot;,5,&quot;F&quot;,5,0) + CASE(   Quality_of_on_line_help__c   , &quot;A&quot;, 5, &quot;B&quot;,5,&quot;C&quot;,5, &quot;D&quot;,5,&quot;F&quot;,5,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed case score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Comments_About_Representative__c</fullName>
        <label>Comments (About Representative)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments (overall performance)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Details__c</fullName>
        <label>Contact Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Link to Contact who completed the survey. May be a &quot;dummy&quot; contact created to capture &apos;anonymous&apos; responses.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ReportCards</relationshipLabel>
        <relationshipName>ReportCards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Content_status__c</fullName>
        <formula>CASE (  Content__c  , &quot;A&quot;, IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;Strong&quot;, 10, 100) &amp; &quot; A&quot;, &quot;B&quot;, IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;Strong&quot;, 10, 80) &amp; &quot; B&quot;, &quot;C&quot;, IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;At risk&quot;, 10, 60) &amp; &quot; C&quot;, &quot;D&quot;, IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;At risk&quot;, 10, 40) &amp; &quot; D&quot;, &quot;F&quot;, IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;Danger&quot;, 10, 20) &amp; &quot; F&quot;, &quot;No response&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Content</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Contacted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this check box if customer was contacted about their survey feedback.</inlineHelpText>
        <label>Customer Contacted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Feedback_Notes__c</fullName>
        <inlineHelpText>Please enter your comments as result of the conversation you had with them regarding their survey feedback.</inlineHelpText>
        <label>Customer Feedback Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Follow_Up_Date__c</fullName>
        <inlineHelpText>Date when the customer was contacted regarding their survey.</inlineHelpText>
        <label>Customer Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deliverables__c</fullName>
        <formula>CASE (  Quality_of_deliverables__c , &quot;A&quot;, IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;Strong&quot;, 10, 100) &amp; &quot; A&quot;, &quot;B&quot;, IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;Strong&quot;, 10, 80) &amp; &quot; B&quot;, &quot;C&quot;, IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;At risk&quot;, 10, 60) &amp; &quot; C&quot;, &quot;D&quot;, IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;At risk&quot;, 10, 40) &amp; &quot; D&quot;, &quot;F&quot;, IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;Danger&quot;, 10, 20) &amp; &quot; F&quot;, &quot;No response&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deliverables</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <label>Environment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Environment_status__c</fullName>
        <formula>CASE (  Environment__c  , &quot;A&quot;, IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;Strong&quot;, 10, 100) &amp; &quot; A&quot;, &quot;B&quot;, IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;Strong&quot;, 10, 80) &amp; &quot; B&quot;, &quot;C&quot;, IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;At risk&quot;, 10, 60) &amp; &quot; C&quot;, &quot;D&quot;, IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;At risk&quot;, 10, 40) &amp; &quot; D&quot;, &quot;F&quot;, IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;Danger&quot;, 10, 20) &amp; &quot; F&quot;, &quot;No response&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Environment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance__c</fullName>
        <label>Finance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Finance_status__c</fullName>
        <formula>CASE (  Finance__c  , &quot;A&quot;, IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;Strong&quot;, 10, 100) &amp; &quot; A&quot;, &quot;B&quot;, IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;Strong&quot;, 10, 80) &amp; &quot; B&quot;, &quot;C&quot;, IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;At risk&quot;, 10, 60) &amp; &quot; C&quot;, &quot;D&quot;, IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;At risk&quot;, 10, 40) &amp; &quot; D&quot;, &quot;F&quot;, IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;Danger&quot;, 10, 20) &amp; &quot; F&quot;, &quot;No response&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Functionality__c</fullName>
        <label>Functionality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Functionality_status__c</fullName>
        <formula>CASE (  Functionality__c  , &quot;A&quot;, IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;Strong&quot;, 10, 100) &amp; &quot; A&quot;, &quot;B&quot;, IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;Strong&quot;, 10, 80) &amp; &quot; B&quot;, &quot;C&quot;, IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;At risk&quot;, 10, 60) &amp; &quot; C&quot;, &quot;D&quot;, IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;At risk&quot;, 10, 40) &amp; &quot; D&quot;, &quot;F&quot;, IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;Danger&quot;, 10, 20) &amp; &quot; F&quot;, &quot;No response&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Functionality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gave_Sense_Of_Confidence__c</fullName>
        <label>Gave Sense Of Confidence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly Agree</fullName>
                </value>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Somewhat Agree</fullName>
                </value>
                <value>
                    <fullName>Somewhat Disagree</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
                <value>
                    <fullName>Strongly Disagree</fullName>
                </value>
                <value>
                    <fullName>Does Not Apply</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Knowledge__c</fullName>
        <label>Staff Knowledge grade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>ReportCards</relationshipLabel>
        <relationshipName>ReportCards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Likely_To_Recommend__c</fullName>
        <label>Likely To Recommend</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing__c</fullName>
        <label>Marketing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_status__c</fullName>
        <formula>CASE (  Marketing__c  , &quot;A&quot;, IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;Strong&quot;, 10, 100) &amp; &quot; A&quot;, &quot;B&quot;, IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;Strong&quot;, 10, 80) &amp; &quot; B&quot;, &quot;C&quot;, IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;At risk&quot;, 10, 60) &amp; &quot; C&quot;, &quot;D&quot;, IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;At risk&quot;, 10, 40) &amp; &quot; D&quot;, &quot;F&quot;, IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;Danger&quot;, 10, 20) &amp; &quot; F&quot;, &quot;No response&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meets_needs__c</fullName>
        <label>Met needs</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Met_needs_status__c</fullName>
        <formula>CASE (  Meets_needs__c  , &quot;A&quot;, IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;Strong&quot;, 10, 100) &amp; &quot; A&quot;, &quot;B&quot;, IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;Strong&quot;, 10, 80) &amp; &quot; B&quot;, &quot;C&quot;, IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;At risk&quot;, 10, 60) &amp; &quot; C&quot;, &quot;D&quot;, IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;At risk&quot;, 10, 40) &amp; &quot; D&quot;, &quot;F&quot;, IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;Danger&quot;, 10, 20) &amp; &quot; F&quot;, &quot;No response&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Met needs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>ReportCards</relationshipLabel>
        <relationshipName>ReportCards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Overall_Performance_2__c</fullName>
        <label>Overall Performance (closed case survey)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Very Good</fullName>
                </value>
                <value>
                    <fullName>Above Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
                <value>
                    <fullName>Extremely Poor</fullName>
                </value>
                <value>
                    <fullName>Does Not Apply</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overall_performance__c</fullName>
        <label>Overall performance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overall_performance_status__c</fullName>
        <formula>CASE (   Overall_performance__c  , &quot;A&quot;, IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;Strong&quot;, 10, 100) &amp; &quot; A&quot;, &quot;B&quot;, IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;Strong&quot;, 10, 80) &amp; &quot; B&quot;, &quot;C&quot;, IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;At risk&quot;, 10, 60) &amp; &quot; C&quot;, &quot;D&quot;, IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;At risk&quot;, 10, 40) &amp; &quot; D&quot;, &quot;F&quot;, IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;Danger&quot;, 10, 20) &amp; &quot; F&quot;, null)</formula>
        <label>Overall performance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P_D_Detractor__c</fullName>
        <formula>IF( P_D__c  &lt; 7, 1, 0)</formula>
        <inlineHelpText>Used to count detractors (scores less than 6)</inlineHelpText>
        <label>P-D Detractor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P_D_Passive__c</fullName>
        <formula>IF(AND(P_D__c  &gt; 6, P_D__c  &lt; 9), 1, 0)</formula>
        <inlineHelpText>Used to count passive (greater than 6 and less than 9)</inlineHelpText>
        <label>P-D Passive</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P_D_Promoter__c</fullName>
        <formula>IF( P_D__c  &gt; 8, 1, 0)</formula>
        <inlineHelpText>Used to count promoters (answers of 9 or 10)</inlineHelpText>
        <label>P-D Promoter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P_D_Status__c</fullName>
        <formula>IF(P_D__c &gt; 8, &quot;Promoter&quot;, IF(P_D__c &lt; 7, &quot;Detractor&quot;, &quot;Passive&quot;))</formula>
        <inlineHelpText>Shows the status of the recommend score. 0-6 = Detractor; 7,8 = Passive; 9,10 = Promoter.</inlineHelpText>
        <label>P-D Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P_D_Why__c</fullName>
        <inlineHelpText>Why did the person give the P-D score they did?</inlineHelpText>
        <label>P-D Why?</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>P_D__c</fullName>
        <inlineHelpText>Likelihood of recommendation to a friend or colleague where 1 is highly unlikely and 10 is highly likely. Used to calculate &apos;%P-%D&apos; score (the % of people who score 9 or 10 - % of people who score less than 6).</inlineHelpText>
        <label>P-D</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Performance_score__c</fullName>
        <formula>( CASE(Overall_performance__c, &quot;A&quot;, 5, &quot;B&quot;, 4,&quot;C&quot;,3, &quot;D&quot;,2,&quot;F&quot;,1,0) + CASE(  Recommendation__c , &quot;Yes&quot;, 5, &quot;No&quot;, 0,2.5) )
/
(CASE( Overall_performance__c , &quot;A&quot;, 5, &quot;B&quot;, 5,&quot;C&quot;,5, &quot;D&quot;,5,&quot;F&quot;,5,0) + CASE( Recommendation__c , &quot;Yes&quot;, 5, &quot;No&quot;, 5,&quot;Don&apos;t know&quot;,5, 0) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Combination of Overall performance score and recommendation</inlineHelpText>
        <label>Performance score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Permission_to_contact__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has the contact given express permission for you to contact them to follow-up?</inlineHelpText>
        <label>Permission to contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price_status__c</fullName>
        <formula>CASE (  Price__c , &quot;A&quot;, IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;Strong&quot;, 10, 100) &amp; &quot; A&quot;, &quot;B&quot;, IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;Strong&quot;, 10, 80) &amp; &quot; B&quot;, &quot;C&quot;, IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;At risk&quot;, 10, 60) &amp; &quot; C&quot;, &quot;D&quot;, IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;At risk&quot;, 10, 40) &amp; &quot; D&quot;, &quot;F&quot;, IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;Danger&quot;, 10, 20) &amp; &quot; F&quot;, &quot;No response&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Printable_survey_link__c</fullName>
        <inlineHelpText>Link to completed Clicktools survey</inlineHelpText>
        <label>Printable survey link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Professionalism__c</fullName>
        <label>Staff Professionalism</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quality_of_deliverables__c</fullName>
        <inlineHelpText>Quality of deliverables in a PS/Consulting project</inlineHelpText>
        <label>Quality of deliverables</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quality_of_deliverables_status__c</fullName>
        <formula>CASE (  Quality_of_deliverables__c  , &quot;A&quot;, IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;Strong&quot;, 10, 100) &amp; &quot; A&quot;, &quot;B&quot;, IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;Strong&quot;, 10, 80) &amp; &quot; B&quot;, &quot;C&quot;, IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;At risk&quot;, 10, 60) &amp; &quot; C&quot;, &quot;D&quot;, IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;At risk&quot;, 10, 40) &amp; &quot; D&quot;, &quot;F&quot;, IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;Danger&quot;, 10, 20) &amp; &quot; F&quot;, &quot;No response&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quality of deliverables</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quality_of_on_line_help__c</fullName>
        <label>Quality of on-line help</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quality_of_on_line_help_status__c</fullName>
        <formula>CASE (  Quality_of_on_line_help__c  , &quot;A&quot;, IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;Strong&quot;, 10, 100) &amp; &quot; A&quot;, &quot;B&quot;, IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;Strong&quot;, 10, 80) &amp; &quot; B&quot;, &quot;C&quot;, IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;At risk&quot;, 10, 60) &amp; &quot; C&quot;, &quot;D&quot;, IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;At risk&quot;, 10, 40) &amp; &quot; D&quot;, &quot;F&quot;, IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;Danger&quot;, 10, 20) &amp; &quot; F&quot;, &quot;No response&quot;)</formula>
        <label>Quality of on-line help</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommend_Why_or_Why_Not__c</fullName>
        <label>Recommend (Why or Why Not)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recommendation__c</fullName>
        <label>Recommendation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>